// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block should render as default 1`] = `
@media (min-width:1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <div
    class="emotion-0"
  >
    <p>
      example
    </p>
  </div>
</div>
`;

exports[`Section should render as default 1`] = `
@media (min-width:1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <div
    class="emotion-0"
  >
    <p>
      example
    </p>
  </div>
</div>
`;

exports[`Section should render as section 1`] = `
@media (min-width:1200px) {
  .emotion-0 {
    padding-left: calc(((100vw - 1200px) / 2));
    padding-right: calc(((100vw - 1200px) / 2));
  }
}

<div>
  <section
    class=" emotion-0"
  >
    <p>
      example
    </p>
  </section>
</div>
`;
